<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CongtruFragment">


    <EditText
        android:id="@+id/edt_nhapA"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_nhap"
        android:hint="@string/enter_a"
        android:padding="@dimen/padding_12dp"
        android:inputType="text"
        android:layout_marginTop="@dimen/magin_top_to_parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="number" />

    <EditText
        android:id="@+id/edt_nhapB"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_30dp"
        android:background="@drawable/btn_nhap"
        android:hint="@string/enter_b"
        android:padding="@dimen/padding_12dp"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/edt_nhapA"
        android:autofillHints="number" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <Button
        android:id="@+id/btn_cong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_cong"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin_top_50dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/edt_nhapB" />

    <Button
        android:id="@+id/btn_nhan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_nhan"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin_top_30dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btn_cong" />

    <Button
        android:id="@+id/btn_tru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_tru"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin_top_50dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/edt_nhapB" />

    <Button
        android:id="@+id/btn_chia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_chia"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin_top_30dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btn_tru" />


</androidx.constraintlayout.widget.ConstraintLayout>