<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bac2Fragment">


    <EditText
        android:id="@+id/edt_nhapA"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:background="@drawable/btn_nhap"
        android:hint="@string/nhap_a"
        android:inputType="text"
        android:padding="@dimen/padding_12dp"
        android:layout_marginTop="@dimen/magin_top_to_parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_nhapB"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_30dp"
        android:autofillHints="number"
        android:background="@drawable/btn_nhap"
        android:hint="@string/nhap_b"
        android:inputType="text"
        android:padding="@dimen/padding_12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/edt_nhapA" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />


    <EditText
        android:id="@+id/edt_nhapC"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_nhap"
        android:hint="@string/enter_c"
        android:padding="@dimen/padding_12dp"
        android:inputType="text"
        android:autofillHints="number"
        android:layout_marginTop="@dimen/margin_top_30dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/edt_nhapB" />

    <Button
        android:id="@+id/btn_tinh"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_tinh"
        android:text="@string/tinh"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/magin_top_to_parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/edt_nhapC" />


</androidx.constraintlayout.widget.ConstraintLayout>